...
        cell.cellImage.kf.setImage(with: viewModel.imageURL, placeholder: UIImage(named: "placeholder")) { [weak self] _ in
            self?.shimmerService.removeShimmerLayers()
        }

        let likeImageName = viewModel.isLiked ? "LikeButtonActive" : "LikeButton"
        cell.likeButton.setImage(UIImage(named: likeImageName), for: .normal)
        cell.likeButton.accessibilityIdentifier = "like button"
        
        cell.delegate = self
        
    }
}

